# audiobook-organizer

./: .gitignore  Cargo.toml  Cross.toml  README.md  build-all.ps1  build-all.sh
.github/workflows/: build-cli.yml  release-cli.yml
cli/: Cargo.toml  Cross.toml
cli/core/: Cargo.toml
cli/core/src/: cli.rs  error.rs  i18n.rs  lib.rs  model.rs  stream.rs  template.rs  types.rs
cli/core/tests/: template_test.rs  whisper_test.rs
cli/organizer/: Cargo.toml
cli/organizer/src/: lib.rs  main.rs
cli/organizer/tests/: e2e_test.rs  rename_test.rs
cli/scanner/: Cargo.toml
cli/scanner/src/: lib.rs  main.rs  scan.rs
cli/scanner/tests/: metadata_test.rs
cli/splitter/: Cargo.toml
cli/splitter/src/: lib.rs  main.rs
cli/splitter/src/encode/: flac.rs  mod.rs  ogg.rs  wav.rs
cli/transcriber/: Cargo.toml
cli/transcriber/src/: lib.rs  main.rs  transcribe.rs
cross/: Dockerfile.linux  Dockerfile.macos  Dockerfile.macos-aarch64  Dockerfile.windows
docs/: architecture.md  cli-reference.md
docs/superpowers/plans/: 2026-05-17-host-app-implementation.md
docs/superpowers/specs/: 2026-05-16-host-app-design.md  2026-05-20-zip-tools-deploy-design.md
host/: index.html  package-lock.json  package.json
host/src/: App.css  App.tsx  SettingsContext.tsx  design-tokens.css  ipc.ts  main.tsx  types.ts
host/src-tauri/: Cargo.toml  tauri.conf.json
host/src-tauri/icons/: icon.icns
host/src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  process.rs  state.rs
host/src/components/: EmptyState.tsx  FileTable.tsx  Icons.tsx  Modal.tsx  ProgressBar.tsx  Settings.tsx
host/src/hooks/: useFileSelection.ts  useFiles.ts  useLog.ts  usePipeline.ts  useTauriEvents.ts
host/src/i18n/: index.ts
host/src/pages/: MainPage.tsx  SettingsPage.tsx
