[package]
name = "audiobook-organizer-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Shared types and utilities for audiobook tools"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
handlebars = "6"
thiserror = "2"
anyhow = "1"
dirs = "5"
ureq = { version = "2", features = ["tls"] }

[dev-dependencies]
tempfile = "3"
