[package]
name = "audiobook-organizer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Template-based audio file renamer and organizer"

[dependencies]
audiobook-organizer-core = { path = "../core" }
audiobook-scanner = { path = "../scanner" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rayon = "1"

[dev-dependencies]
tempfile = "3"

