[package]
name = "audiobook-scanner"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Audio file scanner and metadata extractor"

[dependencies]
audiobook-organizer-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
symphonia = { version = "0.6", features = ["all"] }
walkdir = "2"
