[package]
name = "audiobook-splitter"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Extract audio from video and split by chapters or time segments"

[dependencies]
audiobook-organizer-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ffmpeg-next = "8.0"
