[package]
name = "audiobook-splitter"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Extract audio from video and split by chapters or time segments"

[lib]
name = "audiobook_splitter"
path = "src/lib.rs"

[[bin]]
name = "audiobook-splitter"
path = "src/main.rs"

[dependencies]
audiobook-organizer-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

symphonia = { version = "0.6", features = [
    "mp3", "isomp4", "aac", "ogg", "vorbis", "flac", "wav",
    "all-meta",
] }
hound = "3"
flac-codec = "1.3"
[target.'cfg(target_arch = "x86_64")'.dependencies]
opus-rs = "0.1"
ogg = "0.9"
