[package]
name = "audiobook-transcriber"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Whisper speech-to-text transcription tool"

[dependencies]
audiobook-organizer-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
hound = "3"
ureq = { version = "2", features = ["tls"] }
whisper-rs = { version = "0.13", optional = true }

[features]
default = []
whisper-rs = ["dep:whisper-rs"]
