[package]
name = "audiobook-host"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tauri host PC GUI for audiobook tools"

[lib]
name = "audiobook_host"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
audiobook-organizer-core = { path = "../../cli/core" }
audiobook-scanner = { path = "../../cli/scanner" }
walkdir = "2"

[package.metadata]
resources = []

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
